typescript/checker/tests/conformance/Symbols/ES5SymbolProperty7.ts.stderr
error: NonSymbolTypedFieldFromSymbol {
    span: Span {
        lo: BytePos(
            66,
        ),
        hi: BytePos(
            81,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/Symbols/ES5SymbolProperty7.ts:5:6
  |
5 |     [Symbol.iterator]() { }
  |      ^^^^^^^^^^^^^^^

